Fixed menu problems.
1. Add animation for the menu transition (opacity 0->1). Note: to
change css sequentially, try to use .queue() function, and don’t forget
to add .dequeue() at the end.
2. There was an issue that when menu-icon is not at the top, click it,
then the page auto scroll, but one would wait a long time to see the
menu show up. The fix is simply add an if condition within hideMenu()
function since this function would be called multiple times, which
takes too much time.
3. The last problem is, the webpage has a wired white space on right.
To fix this, I found the trouble maker, which is the .meta class. The
way to find it is:
$(*).each(function(){
  rightPos = $(this).offset().left + $(this).width();
  // check the right position of every DOM element
 })

--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,10 @@
 /*********************************************************/
 
 html,body {
+    width: 100%;
     height: 100%;
     margin: 0;
+    padding: 0;
 }
 
 h1,h2,p {
@@ -55,8 +57,8 @@ h1,h2,p {
 
 .cover {
     background: url("../img/cover.png");
-    /*background-size: cover auto;*/
-    /*background-repeat: no-repeat;*/
+    background-size: cover auto;
+    background-repeat: no-repeat;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -129,7 +131,7 @@ h3.detail {
 header {
     position: absolute;
     background: #fff;
-    width: 100%;
+    width:inherit;
     height: 100px;
     z-index: 100;
     box-shadow: 0 3px 5px rgba(0,0,0,0.2);
@@ -223,8 +225,9 @@ nav li:hover {
 
 #menu-bg {
     position: absolute;
-    width: 100%;
     top: 40px;
+    right: 0;
+    margin: 0;
     display: none;
     z-index: 99;
     -webkit-filter: blur(10px);
@@ -338,6 +341,10 @@ nav li:hover {
     background-image: url("../img/lowpoly-white.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    transition: all .4s ease-in-out 0s;
+    -moz-transition: all .4s ease-in-out 0s;
+    -webkit-transition: all .4s ease-in-out 0s;
+    -o-transition: all .4s ease-in-out 0s;
 }
 
 .bg-ultrawhite {
@@ -345,6 +352,10 @@ nav li:hover {
     background: url("../img/lowpoly-ultrawhite.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    transition: all .4s ease-in-out 0s;
+    -moz-transition: all .4s ease-in-out 0s;
+    -webkit-transition: all .4s ease-in-out 0s;
+    -o-transition: all .4s ease-in-out 0s;
 }
 
 .bg-mesh {
@@ -352,6 +363,11 @@ nav li:hover {
     background-image: url("../img/mesh.png");
     background-size: cover;
     background-repeat: no-repeat;
+    transition: all .4s ease-in-out 0s;
+    -moz-transition: all .4s ease-in-out 0s;
+    -webkit-transition: all .4s ease-in-out 0s;
+    -o-transition: all .4s ease-in-out 0s;
+
 }
 
 .title {
@@ -650,6 +666,10 @@ a:hover {
     color: #fff;
     text-align: center;
     line-height: 400%;
+    transition: all .4s ease-in-out 0s;
+    -moz-transition: all .4s ease-in-out 0s;
+    -webkit-transition: all .4s ease-in-out 0s;
+    -o-transition: all .4s ease-in-out 0s;
 }
 
 .hrule {
