--- a/css/queries.css
+++ b/css/queries.css
@@ -54,7 +54,7 @@
 	    font-size: 120%;
 	    font-weight: 400;
 	    line-height: 100px;
-	    margin-left: 1%;
+	    margin-left: 0;
 	    padding: 0 10px;
 	}
 
@@ -87,10 +87,8 @@
 
 	nav ul, nav:active ul {
 		line-height: 150%;
-		display: none;
 		position: absolute;
 		padding: 0;
-		width: 100%;
 		right: 0;
 		margin: 0;
 		vertical-align: initial;
@@ -240,6 +238,7 @@
 
 	.meta {
 		width: 100%;
+		margin: 0;
 	}
 
 	.content h1 {
@@ -272,15 +271,19 @@
 	.skills {
 		margin-left: 2%;
 		margin-right: 2%;
+		margin-top: 10px;
+		margin-bottom: 10px;
 		width: 20%;
 	}
 
 	.line {
 		margin-left: 5%;
 		width: 50%;
+		margin-top: 10px;
+		margin-bottom: 10px;
 	}
 
 	.icon {
-		margin-left: 5%;
+		margin-left: 2%;
 	}
 }
